--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viewer",
+  "name": "svgviewer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,7 +19,6 @@
     "@xstate/react": "^4.1.1",
     "effect": "^3.7.0",
     "flatbush": "^4.4.0",
-    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "transformation-matrix": "^2.16.1",
