--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,6 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "exclude": ["src/lib/old"]
+  "include": ["src"]
 }
